Fix z-index on lookbook carousel

--- a/app/assets/stylesheets/section/lookbooks.scss
+++ b/app/assets/stylesheets/section/lookbooks.scss
@@ -24,7 +24,7 @@ section#lookbooks {
       height: 38px;
       display: block;
       top: 70px;
-      z-index: 100;
+      z-index: 1;
       cursor: pointer;
     }
     .jcarousel-prev {
